--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -678,6 +678,7 @@ progress {
   margin-top: calc(-1 * var(--bs-gutter-y));
   margin-right: calc(-0.5 * var(--bs-gutter-x));
   margin-left: calc(-0.5 * var(--bs-gutter-x));
+  
 }
 .row > * {
   flex-shrink: 0;
@@ -690,6 +691,7 @@ progress {
 
 .col {
   flex: 1 0 0%;
+  
 }
 
 .row-cols-auto > * {
@@ -1995,8 +1997,8 @@ progress {
 }
 
 .form-control {
-  display: block;
-  width: 100%;
+  display: inline;
+  width: 50%;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   font-weight: 400;
@@ -2011,6 +2013,11 @@ progress {
   border-radius: 0.375rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
+
+.space {
+  margin-bottom: 1rem;
+}
+
 @media (prefers-reduced-motion: reduce) {
   .form-control {
     transition: none;
@@ -2066,6 +2073,10 @@ progress {
 }
 .form-control:hover:not(:disabled):not([readonly])::file-selector-button {
   background-color: #dde0e3;
+}
+
+.form-control {
+  margin-right: 0.7rem;
 }
 
 .form-control-plaintext {
@@ -11016,15 +11027,15 @@ body {
   }
   #mainNav .navbar-brand {
     padding: 0.5rem 0;
-    color: rgba(255, 255, 255, 0.5);
+    color: rgba(125, 125, 125, 0.5);
   }
   #mainNav .nav-link {
     transition: none;
     padding: 2rem 1.5rem;
-    color: rgba(255, 255, 255, 0.5);
+    color: rgba(125, 125, 125, 0.5);
   }
   #mainNav .nav-link:hover {
-    color: rgba(255, 255, 255, 0.75);
+    color: rgba(125, 125, 125, 0.75);
   }
   #mainNav .nav-link:active {
     color: #fff;
@@ -11074,6 +11085,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
+  
 }
 .masthead h1, .masthead .h1 {
   font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -11084,6 +11096,8 @@ body {
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
           background-clip: text;
+  
+  
 }
 .masthead h2, .masthead .h2 {
   max-width: 20rem;
@@ -11155,7 +11169,7 @@ body {
   height: auto;
   font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 80%;
-  text-transform: uppercase;
+  
   letter-spacing: 0.15rem;
   border: 0;
 }
@@ -11201,3 +11215,4 @@ body {
 .footer {
   padding: 5rem 0;
 }
+
