--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -12,8 +12,8 @@
 
                 <% if(typeof(session) != "undefined"  && typeof(session.logged) != "undefined") {%>
 
-                    <li class="nav-item"><a class="nav-link" href="books">Books</a></li>
-                    <li class="nav-item"><a class="nav-link" href="authors">Authors</a></li>                    
+                    <li class="nav-item"><a class="nav-link" href="/books">Books</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/authors">Authors</a></li>                    
                     <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>            
                 <%} else {%>        
 
